Services fullscreen fixed z-index on navbar  done

--- a/client/src/sass/components/layout/_home.scss
+++ b/client/src/sass/components/layout/_home.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-wrap: wrap;
     position: fixed;
+    z-index: 1000;
     width: 100%;
     justify-content: space-around;
     align-items: center;
