--- a/client/src/sass/components/typograpfy/_services.scss
+++ b/client/src/sass/components/typograpfy/_services.scss
@@ -13,7 +13,7 @@
       &--heading {
         font-weight: 700;
         font-family: $font-family-1;
-        font-size: 1.9rem;
+        font-size: 1.6rem;
         color: $color-blue-dark;
       }
 
@@ -21,7 +21,7 @@
         font-family: $font-family-3;
         color: $color-grey-blue;
         line-height: 1.75;
-        font-size: 1.4rem;
+        font-size: 1.35rem;
       }
     }
   }
